fix(capi-cluster/aws) : user must specify subnet IDs when using an existing VPC
Signed-off-by: Archisman <archisman@obmondo.com>

--- a/argocd-helm-charts/capi-cluster/charts/aws/templates/AWSCluster.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/aws/templates/AWSCluster.yaml
@@ -12,10 +12,19 @@ spec:
     vpc:
       {{- if .Values.vpc.id }}
       id: {{ .Values.vpc.id }}
-      {{- end }}
-      cidrBlock: {{ .Values.vpc.cidrBlock }}
+      {{- else }}
+      cidrBlock: {{ .Values.vpc.cidrBlock | default "10.14.0.0/22" }}
       availabilityZoneSelection: Ordered
       availabilityZoneUsageLimit: 3
+      {{- end }}
+    {{- if .Values.vpc.id }}
+    {{/* The user must specify 3 subnets- each in a different Availability Zone (AZ). This
+         validation is done by KubeAid Bootstrap Script. */}}
+    subnets:
+      {{- range $index, $subnetID := $.Values.vpc.subnets }}
+      - id: {{ $subnetID }}
+      {{- end }}
+    {{- end }}
     cni:
       cniIngressRules:
         - description: Cilium
