--- a/argocd-helm-charts/opentelemetry-operator/charts/opentelemetry-operator/examples/default/rendered/certmanager.yaml
+++ b/argocd-helm-charts/opentelemetry-operator/charts/opentelemetry-operator/examples/default/rendered/certmanager.yaml
@@ -4,10 +4,11 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   labels:
-    helm.sh/chart: opentelemetry-operator-0.82.0
+    helm.sh/chart: opentelemetry-operator-0.83.0
     app.kubernetes.io/name: opentelemetry-operator
-    app.kubernetes.io/version: "0.119.0"
+    app.kubernetes.io/version: "0.120.0"
     app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/part-of: opentelemetry-operator
     app.kubernetes.io/instance: example
     app.kubernetes.io/component: webhook
   name: example-opentelemetry-operator-serving-cert
@@ -29,10 +30,11 @@ apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
   labels:
-    helm.sh/chart: opentelemetry-operator-0.82.0
+    helm.sh/chart: opentelemetry-operator-0.83.0
     app.kubernetes.io/name: opentelemetry-operator
-    app.kubernetes.io/version: "0.119.0"
+    app.kubernetes.io/version: "0.120.0"
     app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/part-of: opentelemetry-operator
     app.kubernetes.io/instance: example
     app.kubernetes.io/component: webhook
   name: example-opentelemetry-operator-selfsigned-issuer
