--- a/argocd-helm-charts/opentelemetry-operator/charts/opentelemetry-operator/examples/default/rendered/deployment.yaml
+++ b/argocd-helm-charts/opentelemetry-operator/charts/opentelemetry-operator/examples/default/rendered/deployment.yaml
@@ -4,10 +4,11 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    helm.sh/chart: opentelemetry-operator-0.82.0
+    helm.sh/chart: opentelemetry-operator-0.83.0
     app.kubernetes.io/name: opentelemetry-operator
-    app.kubernetes.io/version: "0.119.0"
+    app.kubernetes.io/version: "0.120.0"
     app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/part-of: opentelemetry-operator
     app.kubernetes.io/instance: example
     app.kubernetes.io/component: controller-manager
   name: example-opentelemetry-operator
@@ -23,7 +24,12 @@ spec:
       annotations:
         kubectl.kubernetes.io/default-container: manager
       labels:
+        helm.sh/chart: opentelemetry-operator-0.83.0
         app.kubernetes.io/name: opentelemetry-operator
+        app.kubernetes.io/version: "0.120.0"
+        app.kubernetes.io/managed-by: Helm
+        app.kubernetes.io/part-of: opentelemetry-operator
+        app.kubernetes.io/instance: example
         app.kubernetes.io/component: controller-manager
     spec:
       hostNetwork: false
@@ -33,13 +39,13 @@ spec:
             - --enable-leader-election
             - --health-probe-addr=:8081
             - --webhook-port=9443
-            - --collector-image=otel/opentelemetry-collector-k8s:0.119.0
+            - --collector-image=otel/opentelemetry-collector-k8s:0.120.0
           command:
             - /manager
           env:
             - name: ENABLE_WEBHOOKS
               value: "true"
-          image: "ghcr.io/open-telemetry/opentelemetry-operator/opentelemetry-operator:0.119.0"
+          image: "ghcr.io/open-telemetry/opentelemetry-operator/opentelemetry-operator:0.120.0"
           name: manager
           ports:
             - containerPort: 8080
