--- a/argocd-helm-charts/opentelemetry-operator/charts/opentelemetry-operator/examples/feature-gates/rendered/clusterrole.yaml
+++ b/argocd-helm-charts/opentelemetry-operator/charts/opentelemetry-operator/examples/feature-gates/rendered/clusterrole.yaml
@@ -4,10 +4,11 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    helm.sh/chart: opentelemetry-operator-0.82.0
+    helm.sh/chart: opentelemetry-operator-0.83.0
     app.kubernetes.io/name: opentelemetry-operator
-    app.kubernetes.io/version: "0.119.0"
+    app.kubernetes.io/version: "0.120.0"
     app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/part-of: opentelemetry-operator
     app.kubernetes.io/instance: example
     app.kubernetes.io/component: controller-manager
   name: example-opentelemetry-operator-manager
@@ -256,10 +257,11 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    helm.sh/chart: opentelemetry-operator-0.82.0
+    helm.sh/chart: opentelemetry-operator-0.83.0
     app.kubernetes.io/name: opentelemetry-operator
-    app.kubernetes.io/version: "0.119.0"
+    app.kubernetes.io/version: "0.120.0"
     app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/part-of: opentelemetry-operator
     app.kubernetes.io/instance: example
     app.kubernetes.io/component: controller-manager
   name: example-opentelemetry-operator-metrics
@@ -274,10 +276,11 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    helm.sh/chart: opentelemetry-operator-0.82.0
+    helm.sh/chart: opentelemetry-operator-0.83.0
     app.kubernetes.io/name: opentelemetry-operator
-    app.kubernetes.io/version: "0.119.0"
+    app.kubernetes.io/version: "0.120.0"
     app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/part-of: opentelemetry-operator
     app.kubernetes.io/instance: example
     app.kubernetes.io/component: controller-manager
   name: example-opentelemetry-operator-proxy
