--- a/argocd-helm-charts/opentelemetry-operator/charts/opentelemetry-operator/examples/feature-gates/rendered/serviceaccount.yaml
+++ b/argocd-helm-charts/opentelemetry-operator/charts/opentelemetry-operator/examples/feature-gates/rendered/serviceaccount.yaml
@@ -6,9 +6,10 @@ metadata:
   name: opentelemetry-operator
   namespace: default
   labels:
-    helm.sh/chart: opentelemetry-operator-0.82.0
+    helm.sh/chart: opentelemetry-operator-0.83.0
     app.kubernetes.io/name: opentelemetry-operator
-    app.kubernetes.io/version: "0.119.0"
+    app.kubernetes.io/version: "0.120.0"
     app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/part-of: opentelemetry-operator
     app.kubernetes.io/instance: example
     app.kubernetes.io/component: controller-manager
