--- a/argocd-helm-charts/opentelemetry-operator/charts/opentelemetry-operator/templates/deployment.yaml
+++ b/argocd-helm-charts/opentelemetry-operator/charts/opentelemetry-operator/templates/deployment.yaml
@@ -27,7 +27,7 @@ spec:
         {{- include "opentelemetry-operator.podAnnotations" . | nindent 8 }}
         {{- end }}
       labels:
-        {{- include "opentelemetry-operator.selectorLabels" . | nindent 8 }}
+        {{- include "opentelemetry-operator.labels" . | nindent 8 }}
         {{- if .Values.manager.podLabels }}
         {{- include "opentelemetry-operator.podLabels" . | nindent 8 }}
         {{- end }}
