--- a/argocd-helm-charts/strimzi-kafka-operator/templates/kafka.yaml
+++ b/argocd-helm-charts/strimzi-kafka-operator/templates/kafka.yaml
@@ -24,25 +24,12 @@ spec:
         {{- if .configuration }}
         configuration:
             bootstrap:
-              host: {{ .configuration.bootstrap.host }}
-              {{- if .configuration.bootstrap.annotations }}
-              annotations:
-                {{- range $key, $value := .configuration.bootstrap.annotations }}
-                {{ $key }}: {{ $value }}
-                {{- end }}
-              {{- end}}
-            brokers:
-            {{- range .configuration.brokers }}
-            - broker: {{ .id }}
-              host: {{ .host }}
-              {{- if .annotations }}
-              annotations:
-                {{- range $key, $value := .annotations }}
-                {{ $key }}: {{ $value }}
-                {{- end }}
-              {{- end}}
-            {{- end}}
-            class: {{ .configuration.class }}
+              {{- if .configuration.bootstrap.alternativeNames}}
+              alternativeNames:
+              {{- range .configuration.bootstrap.alternativeNames}}
+                 - {{ . }}
+              {{- end }}
+              {{- end }}
         {{- end}}
     {{- end }}
     storage:
