--- a/argocd-helm-charts/strimzi-kafka-operator/values.yaml
+++ b/argocd-helm-charts/strimzi-kafka-operator/values.yaml
@@ -7,17 +7,22 @@ kafka:
       listeners:
         - name: internal
           port: 9094
-          type: internal
+          type: nodeport
           tls: true
           authentication:
             type: tls
+          configuration:
+            bootstrap:
+              alternativeNames:
+                - 192.168.49.2
+                - kafka.localhost.com
 
       storage:
         type: jbod
         # volumes is to be set if the above storage type is jbod
         volumes:
         - id: 0
-          class: rook-ceph-block
+          class: standard
           type: persistent-claim
           size: 1Gi
           deleteClaim: false
@@ -31,7 +36,7 @@ kafka:
       replicas: 3
       storage:
         type: persistent-claim
-        class: rook-ceph-block
+        class: standard
         size: 1Gi
         deleteClaim: false
 
@@ -69,11 +74,11 @@ kafkaUser:
             - Read
 
 ingress:
-  enable: false
+  enable: true
   class: nginx
   name: kafka
   rules:
-    - host: localhost
+    - host: kafka.localhost.com
       http:
         paths:
           - path: /
