feat(capi-cluster/azure) : support provisioning self-managed Azure based Kubernetes cluster using ClusterAPI
Signed-off-by: Archisman <archisman@obmondo.com>

--- a/argocd-helm-charts/capi-cluster/values.yaml
+++ b/argocd-helm-charts/capi-cluster/values.yaml
@@ -10,9 +10,11 @@ global:
   caph:
     version: v1.0.1
   capz:
-    version: v1.17.2
+    version: v1.18.1
   kubeaid:
     repo: https://github.com/Obmondo/KubeAid.git
+  pods:
+    cidrBlock: 10.244.0.0/16
 
 provider:
   hetzner: false
