--- a/argocd-helm-charts/capi-cluster/templates/provider-azure.yaml
+++ b/argocd-helm-charts/capi-cluster/templates/provider-azure.yaml
@@ -1,16 +1,36 @@
 {{- if (.Values.provider).azure }}
-# Need to work on this, not completed
+
+{{- /* For non Obmondo users, no customerid is needed. */ -}}
+{{- $name := "azure" }}
+{{- $namespace := "capi-cluster" }}
+
+{{- /* For obmondo customers. */ -}}
+{{- if .Values.global.customerid }}
+{{- $name = printf "%s-%s" $name .Values.global.customerid }}
+{{- $namespace = printf "%s-%s" $namespace .Values.global.customerid }}
+{{- end }}
+
 apiVersion: operator.cluster.x-k8s.io/v1alpha2
 kind: InfrastructureProvider
 metadata:
-  name: azure-{{ .Values.global.customerid }}
-  namespace: {{ .Release.Namespace }}
+  name: {{ $name }}
+  namespace: {{ $namespace }}
 spec:
   version: {{ .Values.global.capz.version }}
   fetchConfig:
     url: https://github.com/kubernetes-sigs/cluster-api-provider-azure/releases/download/{{ .Values.global.capz.version }}/infrastructure-components.yaml
+  deployment:
+    nodeSelector:
+      node-role.kubernetes.io/control-plane: ""
+    tolerations:
+      - key: "node-role.kubernetes.io/control-plane"
+        operator: "Exists"
+        effect: "NoSchedule"
   manager:
-    metrics:
-      bindAddress: ":8443"
+    cacheNamespace: {{ $namespace }}
+    # BUG : CAPZ infrastructure provider errors out, complaining :
+    #           unknown flag: --metrics-bind-addr.
+    # metrics:
+    #   bindAddress: ":8443"
     syncPeriod: 10m0s
 {{- end }}
