fix(capi-cluster/azure) : fixed the subchart
Signed-off-by: Archisman <archisman@obmondo.com>

--- a/argocd-helm-charts/capi-cluster/charts/azure/templates/AzureCluster.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/azure/templates/AzureCluster.yaml
@@ -1,40 +1,46 @@
-{{- if .Values.selfManagedCluster.enabled }}
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: AzureCluster
 metadata:
   name: {{ .Values.global.clusterName }}
 spec:
+  subscriptionID: {{ .Values.subscriptionID }}
+  resourceGroup: {{ .Values.resourceGroup }}
+
   location: {{ .Values.location }}
 
-  resourceGroup: {{ .Values.resourceGroup }}
-  subscriptionID: {{ .Values.subscriptionID }}
+  networkSpec:
+    apiServerLB:
+      type: {{ .Values.controlPlane.loadbalancerType }}
+    vnet:
+      name: {{ .Values.global.clusterName }}
+      cidrBlocks:
+        - {{ .Values.virtualNetwork.cidrBlock | default "10.0.0.0/8" }}
+    subnets:
+      - name: control-plane
+        role: control-plane
+      - name: worker-nodes
+        role: node
+
+  bastionSpec:
+    azureBastion:
+      name: bastion
+      publicIP:
+        name: bastion
+      {{/* SKU is also known as a tier. You can see all the tiers here :
+           https://learn.microsoft.com/en-us/azure/bastion/configuration-settings#skus .*/}}
+      sku: Standard
+      {{/* You can establish a secure tunnel over SSH / RDP, from your local machine to the VMs in
+           the VPC. */}}
+      enableTunneling: true
+      {{/* For Subnet, if you already have a subnet configured in your virtual network that is named
+           AzureBastionSubnet, it will automatically select in the portal. If you don't, you can
+           create one.
+           REFERENCE : https://learn.microsoft.com/en-us/azure/bastion/tutorial-create-host-portal. */}}
+      subnet:
+        name: AzureBastionSubnet
+        role: control-plane
 
   identityRef:
     apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
     kind: AzureClusterIdentity
     name: {{ .Values.global.clusterName }}-cluster-identity
-
-  bastionSpec:
-    azureBastion:
-      name: bastion
-      enableTunneling: true
-      publicIP:
-        name: bastion
-      sku: Standard
-      subnet:
-        name: AzureBastionSubnet
-        role: ControlPlane
-
-  networkSpec:
-    apiServerLB:
-      type: {{ .Values.selfManagedCluster.apiLoadbalancer }}
-    vnet:
-      name: {{ .Values.global.vnet.name }}
-      cidrBlocks:
-        - {{ .Values.global.vnet.cidrBlock | default "10.14.0.0/22" }}
-    subnets:
-      - name: control-plane
-        role: ControlPlane
-      - name: worker-nodes
-        role: Node
-{{- end }}
