--- a/argocd-helm-charts/capi-cluster/charts/azure/templates/cluster.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/azure/templates/cluster.yaml
@@ -6,21 +6,12 @@ spec:
   clusterNetwork:
     pods:
       cidrBlocks:
-        - {{ .Values.global.pods.cidrBlock | default "10.244.0.0/16" }}
+        - {{ (.Values.global.pods).cidrBlock | default "192.168.0.0/16" }}
   controlPlaneRef:
-    {{- if .Values.selfManagedCluster.enabled -}}
     apiVersion: controlplane.cluster.x-k8s.io/v1beta1
     kind: KubeadmControlPlane
-    {{- else -}}
-    apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
-    kind: AzureManagedControlPlane
-    {{- end -}}
     name: {{ .Values.global.clusterName }}-control-plane
   infrastructureRef:
     apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
-    {{- if .Values.selfManagedCluster.enabled -}}
     kind: AzureCluster
-    {{- else -}}
-    kind: AzureManagedCluster
-    {{- end -}}
     name: {{ .Values.global.clusterName }}
