increase memory request and limit for Velero pod
Signed-off-by: Archisman <archisman@obmondo.com>

--- a/argocd-helm-charts/velero/values.yaml
+++ b/argocd-helm-charts/velero/values.yaml
@@ -14,10 +14,10 @@ velero:
       enabled: true
   resources:
     limits:
-      memory: 512Mi
+      memory: 4Gi
     requests:
       cpu: 3m
-      memory: 128Mi
+      memory: 2Gi
   upgradeJobResources:
     requests:
       memory: 100Mi
