--- a/argocd-helm-charts/puppetserver/values.yaml
+++ b/argocd-helm-charts/puppetserver/values.yaml
@@ -43,6 +43,8 @@ puppetserver:
   puppetboard:
     enabled: true
     name: puppetboard
+    image: ghcr.io/voxpupuli/puppetboard
+    tag: 6.0.1
 
   metrics:
     prometheus:
