feat(capi-cluster/azure) : consuming service account issuer keys from Kubernetes Secret | removing root account password for each node
Signed-off-by: Archisman <archisman@obmondo.com>

--- a/argocd-helm-charts/capi-cluster/charts/azure/templates/kubeadmConfigTemplate.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/azure/templates/kubeadmConfigTemplate.yaml
@@ -24,6 +24,9 @@ spec:
           {{- if $nodeGroup.taints }}
           taints: {{- toYaml $nodeGroup.taints | nindent 10 }}
           {{- end }}
+      preKubeadmCommands:
+        # Delete password for the root user.
+        - passwd -d root
       {{- if (gt (len $.Values.global.additionalUsers) 0) }}
       users:
         {{- range $index, $additionalUser := $.Values.global.additionalUsers }}
