fix(keycloakx/backup) : updated keycloakx's postgres logical backup container image
Signed-off-by: Archisman <archisman@obmondo.com>

--- a/argocd-helm-charts/keycloakx/templates/postgresql-logical-backup.yaml
+++ b/argocd-helm-charts/keycloakx/templates/postgresql-logical-backup.yaml
@@ -15,7 +15,7 @@ spec:
         spec:
           containers:
             - name: logical-backup
-              image: ghcr.io/obmondo/logical-backup:1.0.1
+              image: ghcr.io/obmondo/postgres-logical-backup:v1.0.6
               imagePullPolicy: IfNotPresent
               env:
                 - name: POD_NAMESPACE
